--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,9 @@
 @import url("photographer.css");
 
 body {
+    max-width: 1240px;
     font-family: "DM Sans", sans-serif;
-    margin: 0;
+    margin: 0 auto;
 }
 
 
