--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,36 @@ h1 {
 .photographer_section article h2 {
     color: #D3573C;
     font-size: 36px;
+    margin-bottom: 0.4rem;
 }
 
 .photographer_section article img {
     height: 200px;
     width: 200px;
+    border-radius: 50%;
+    background-image: center center;
+    object-fit: cover;
+}
+
+.photographer_section a {
+    text-decoration: none;
+}
+
+.photographer_section span {
+    color: #D3573C;
+    margin-top: 1rem;
+}
+
+.pricce {
+    margin-left: 3.5rem;
+    color:#757575
+}
+
+/* .country {
+      
+} */
+
+.tagline {
+    padding-left: 0.4rem;
+    color: #000;
 }
